opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/roburio/builder"
dev-repo: "git+https://github.com/roburio/builder.git"
bug-reports: "https://github.com/roburio/builder/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "asn1-combinators"
  "bheap"
  "bos"
  "cmdliner"
  "cstruct" {>= "6.0.0"}
  "duration"
  "fmt"
  "fpath"
  "logs"
  "lwt"
  "ptime"
  "rresult"
  "uuidm"
  "curly"
  "base64"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["sh" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "packaging/debian/create_package.sh"] {os-family = "debian"}
]

synopsis: "Scheduling and executing shell jobs"
