opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/roburio/builder"
dev-repo: "git+https://github.com/roburio/builder.git"
bug-reports: "https://github.com/roburio/builder/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "asn1-combinators"
  "bheap"
  "bos"
  "cmdliner"
  "cstruct" {>= "6.0.0"}
  "duration"
  "fmt"
  "fpath"
  "logs"
  "lwt"
  "ptime"
  "rresult"
  "uuidm"
  "http-lwt-client" {>= "0.0.2"}
  "base64"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian"}
]

synopsis: "Scheduling and executing shell jobs"
